--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -30,38 +30,43 @@
                                 </thead>
                                 <% if (cart && cart.product && cart.product.length > 0) { %>
                                     <% cart.product.forEach(item => { %>
-                                        <tr>
-                                            <td class="image product-thumbnail">
-                                                <img src="/Productimages/<%= item.productId.media?.[0] || '/path/to/default/image.jpg' %>" alt="<%= item.productId.name && item.productId.name || 'Product Image' %>">
-                                            </td>
-                                            <td class="product-des product-name">
-                                                <h5 class="product-name"><a href="/product/<%= item.productId._id %>"><%= item.productId.name %></a></h5>
-                                                <p class="font-xs"><%= item.productId.description.substring(0, 50) %>...</p>
-                                            </td>
-                                            <td class="price" data-title="Price">
-                                                <span class="price-val" data-product-id="<%= item.productId._id %>" data-price="<%= item.productId.price %>">$<%= item.productId.price.toFixed(2) %></span>
-                                              </td>
-                                              <td class="text-center" data-title="Stock">
-                                                <div class="detail-qty border radius m-auto">
-                                                  <button class="qty-up" data-max-stock="<%= item.productId.stock %>" data-product-id="<%= item.productId._id %>" data-cart-id="<%= cart._id %>">
-                                                    <i class="fi-rs-angle-small-up"></i>
-                                                  </button>
-                                                  <span class="qty-val" data-product-id="<%= item.productId._id %>"><%= item.quantity %></span>
-                                                  <button class="qty-down" data-max-stock="<%= item.productId.stock %>" data-product-id="<%= item.productId._id %>" data-cart-id="<%= cart._id %>">
-                                                    <i class="fi-rs-angle-small-down"></i>
-                                                  </button>
-                                                </div>
-                                              </td>
-                                              <td class="text-right" data-title="Cart">
-                                                <span class="total-price" data-product-id="<%= item.productId._id %>">$<%= (item.productId.price * item.quantity).toFixed(2) %></span>
-                                              </td>
-                                              
-                                            <td class="action" data-title="Remove">
-                                            <a href="#" class="text-muted" onclick="removeQuantity('<%= cart._id %>', '<%= item.productId.id %>')">
-                                                    <i class="fi-rs-trash"></i>
-                                                </a>
-                                            </td>
-                                        </tr>
+                                        <% if (item.productId) { %>
+                                            <tr>
+                                                <td class="image product-thumbnail">
+                                                    <img src="/Productimages/<%= item.productId.media?.[0] || '/path/to/default/image.jpg' %>" alt="<%= item.productId.name && item.productId.name || 'Product Image' %>">
+                                                </td>
+                                                <td class="product-des product-name">
+                                                    <h5 class="product-name"><a href="/product/<%= item.productId._id %>"><%= item.productId.name %></a></h5>
+                                                    <p class="font-xs"><%= item.productId.description.substring(0, 50) %>...</p>
+                                                </td>
+                                                <td class="price" data-title="Price">
+                                                    <span class="price-val" data-product-id="<%= item.productId._id %>" data-price="<%= item.productId.price %>">$<%= item.productId.price.toFixed(2) %></span>
+                                                </td>
+                                                <td class="text-center" data-title="Stock">
+                                                    <div class="detail-qty border radius m-auto">
+                                                        <button class="qty-up" data-max-stock="<%= item.productId.stock %>" data-product-id="<%= item.productId._id %>" data-cart-id="<%= cart._id %>">
+                                                            <i class="fi-rs-angle-small-up"></i>
+                                                        </button>
+                                                        <span class="qty-val" data-product-id="<%= item.productId._id %>"><%= item.quantity %></span>
+                                                        <button class="qty-down" data-max-stock="<%= item.productId.stock %>" data-product-id="<%= item.productId._id %>" data-cart-id="<%= cart._id %>">
+                                                            <i class="fi-rs-angle-small-down"></i>
+                                                        </button>
+                                                    </div>
+                                                </td>
+                                                <td class="text-right" data-title="Cart">
+                                                    <span class="total-price" data-product-id="<%= item.productId._id %>">$<%= (item.productId.price * item.quantity).toFixed(2) %></span>
+                                                </td>
+                                                <td class="action" data-title="Remove">
+                                                    <a href="#" class="text-muted" onclick="removeQuantity('<%= cart._id %>', '<%= item.productId.id %>')">
+                                                        <i class="fi-rs-trash"></i>
+                                                    </a>
+                                                </td>
+                                            </tr>
+                                        <% } else { %>
+                                            <tr>
+                                                <td colspan="6" class="text-center">Product information is not available.</td>
+                                            </tr>
+                                        <% } %>
                                     <% }) %>
                                 <% } else { %>
                                     <tr>
